styles/nav.css
/* Nav section */
.nav {
    position: sticky;
    top: 0;
    z-index: 3;
}

.nav__container {
    padding: 0 25px;
    transition: padding 250ms ease-in;
}

.nav__container.active {
    padding: 0;
    background: var(--clr-white);
}

.nav__wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 57px;
    border-bottom: 1px solid var(--clr-smoke);
}

.nav__logo {
    font-family: 'Dancing Script', cursive;
    font-size: 1.375rem;
}

.nav__menu {
    display: flex;
    transition: transform 250ms ease-in,
                opacity 250ms ease-in;
}

.nav__menu.open { /* Show menu on mobile */
    transform: translateY(0);
    opacity: 1;
}

.nav__item {
    transition: margin 250ms ease-in;
}

.nav__item:not(:last-child) {
    margin-right: 60px;
}

.nav__link {
    position: relative;
    display: block;
    padding: 20px 0;
    text-transform: uppercase;
    font-size: 0.875rem;
}

.nav__link::before {
    position: absolute;
    content: '';
    height: 2px;
    width: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: var(--clr-red);
    transform: translateY(-28px);
    transition: width 350ms ease-in,
                transform 150ms ease-in;
}

.nav__link:hover::before {
    width: 100%;
    transform: translateY(-10px);
}

/* Hamburger menu button*/
.nav__mobile-btn { /* button container */
    position: relative;
    display: none;
    justify-content: center;
    align-items: center;
    width: 30px;
    height: 30px;
    cursor: pointer;
    padding: 13px 0; /* this pading set height of whole nav on mobile */
}

.nav__hamburger { /* middle hamburger line */
    width: 30px;
    height: 3px;
    background: var(--clr-gray);
    border-radius: 5px;
    transition: transform 0.5s ease-in-out,
                background 0.5s ease-in-out;
}

.nav__hamburger::before, /* first and last hamburger line */
.nav__hamburger::after {
    position: absolute;
    content: '';
    width: 30px;
    height: 3px;
    background: var(--clr-gray);
    border-radius: 5px;
    transition: transform 0.5s ease-in-out;
}

.nav__hamburger::before {
    transform: translateY(-10px);
}

.nav__hamburger::after {
    transform: translateY(10px);
}

.nav__mobile-btn.open .nav__hamburger { /* Hide middle hamburger line */
    transform: translateX(-50px);
    background: transparent;
}

.nav__mobile-btn.open .nav__hamburger::before { /* Rotate first hamburger line */
    transform: rotate(45deg) translate(35px, -35px);
}

.nav__mobile-btn.open .nav__hamburger::after { /* Rotate last hamburger line */
    transform: rotate(-45deg) translate(35px, 35px);
}

/* Nav media queries */
@media (max-width: 1024px) {
    .nav__item:not(:last-child) {
        margin-right: 50px;
    }
}

@media (max-width: 768px) {
    .nav__wrapper {
        position: relative;
    }

    .nav__menu { /* Hide menu on mobile */
        position: absolute;
        flex-direction: column;
        align-items: center;
        width: 100%;
        top: 72px;
        left: 0;
        transform: translateX(-500px);
        opacity: 0;
        background: rgba(255, 255, 255, 0.2);
    }

    .nav__item:not(:last-child) {
        margin-right: 0px;
    }

    .nav__mobile-btn { /* Shows hamburger menu */
        display: flex;
    }
}

